@@ -54,6 +54,7 @@ CREATE TABLE IF NOT EXISTS `configuration` (
   `LOG_SEARCH` int(11) NOT NULL DEFAULT '2',
   `STATISTICS` varchar(5) NOT NULL DEFAULT 'True',
   `SECOND_REGUL` VARCHAR( 5 ) NOT NULL DEFAULT 'False',
+  `REGUL_SENSOR` VARCHAR( 5 ) NOT NULL DEFAULT 'False',
   PRIMARY KEY (`id`)
 ) ENGINE=InnoDB  DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ;
 
@@ -62,8 +63,8 @@ CREATE TABLE IF NOT EXISTS `configuration` (
 --
 
 
-INSERT INTO `configuration` (`id`, `CHECK_UPDATE`, `VERSION`, `COLOR_HUMIDITY_GRAPH`, `COLOR_TEMPERATURE_GRAPH`, `COLOR_POWER_GRAPH`, `COLOR_COST_GRAPH`, `RECORD_FREQUENCY`, `POWER_FREQUENCY`, `NB_PLUGS`, `UPDATE_PLUGS_FREQUENCY`, `SHOW_POPUP`, `ALARM_ACTIV`, `ALARM_VALUE`, `ALARM_SENSO`, `ALARM_SENSS`, `COST_PRICE`, `COST_PRICE_HP`, `COST_PRICE_HC`, `START_TIME_HC`, `STOP_TIME_HC`, `COST_TYPE`, `LOG_SEARCH`, `STATISTICS`,`SECOND_REGUL`) VALUES
-(1, 'True', '1.1.9', 'blue', 'red', 'black', 'purple', 5, 1, 3, -1, 'True', '0000', '15', '000H', '000+', 0.1225, 0.1353, 0.0926, '22:30', '06:30', 'standard', 2, 'True', 'False');
+INSERT INTO `configuration` (`id`, `CHECK_UPDATE`, `VERSION`, `COLOR_HUMIDITY_GRAPH`, `COLOR_TEMPERATURE_GRAPH`, `COLOR_POWER_GRAPH`, `COLOR_COST_GRAPH`, `RECORD_FREQUENCY`, `POWER_FREQUENCY`, `NB_PLUGS`, `UPDATE_PLUGS_FREQUENCY`, `SHOW_POPUP`, `ALARM_ACTIV`, `ALARM_VALUE`, `ALARM_SENSO`, `ALARM_SENSS`, `COST_PRICE`, `COST_PRICE_HP`, `COST_PRICE_HC`, `START_TIME_HC`, `STOP_TIME_HC`, `COST_TYPE`, `LOG_SEARCH`, `STATISTICS`,`SECOND_REGUL`, `REGUL_SENSOR`) VALUES
+(1, 'True', '1.1.9', 'blue', 'red', 'black', 'purple', 5, 1, 3, -1, 'True', '0000', '15', '000H', '000+', 0.1225, 0.1353, 0.0926, '22:30', '06:30', 'standard', 2, 'True', 'False', 'False');
 
 -- --------------------------------------------------------
 
