@@ -306,8 +306,15 @@ timeFormat: 'hh:mm',
          </select></td>
         <td></td>
    </tr>
-
-
+   <tr>
+         <td class="conf-marge"></td>
+         <td><?php echo __('MULTIPLE_REGUL_SENSOR'); ?>:<img src="main/libs/img/infos.png" alt="" title="<?php echo __('TOOLTIP_REGUL_SEVERAL_SENSOR'); ?>" /></td>
+         <td><select name="several_sensor">
+            <option value="True" <?php if(strcmp("$several_sensor","True")==0) echo "selected"; ?>><?php echo __('YES'); ?></option>
+            <option value="False" <?php if(strcmp("$several_sensor","False")==0) echo "selected"; ?>><?php echo __('NO'); ?></option>
+         </select></td>
+        <td></td>
+   </tr>
 </table>
 </div>
 <div id="div_system_interface" style="display:none">
