@@ -2,6 +2,8 @@ Cultibox (1.1.19) precise; urgency=low
     + La checkbox qui permet d'effacer un programme avant d'en ajouter un autre ne reste plus selectionnée
     + Ajout de tooltips pour la partie gestion des programmes
     + Inversion des deux boutons 'fin' et 'configurer une autre prise' du wizard
+    + Ajout d'une option de configuration permettant d'activer ou non le selection du capteur pour la régulation
+    + Correction d'un bug sur le zoom des puissances dans les logs
 
 -- Yann Genevois <yann.genevois@gmail.com>  Mon May  6 12:26:10 CEST 2013
 
